--- a/core/templates/core/simulation.html
+++ b/core/templates/core/simulation.html
@@ -279,7 +279,7 @@
         </div>
     </div>
     <p class="mt-4">🟢 Economia total estimada: R${{ total_savings|floatformat:2 }}</p>
-    <a href="{% url 'create_holding' %}" class="auth-btn mt-4">Criar sua Holding</a>
+    <a href="{% url 'dashboard' %}" class="auth-btn mt-4">Criar sua Holding</a>
 </div>
         </div>
     </section>
