--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -23,11 +23,7 @@
                 <li><a href="{% url 'index' %}#comparison">Benefícios</a></li>
                 <li><a href="{% url 'index' %}#steps">Etapas</a></li>
             </ul>
-            {% if user.is_authenticated %}
-                <a href="{% url 'account_logout' %}" class="login-button">Sair</a>
-            {% else %}
-                <a href="{% url 'login' %}" class="login-button">Entrar</a>
-            {% endif %}
+            <a href="{% url 'login' %}" class="login-button">Entrar</a>
         </nav>
     </header>
     {% endblock %}
@@ -41,7 +37,9 @@
         <p class="production">Uma produção de <a href="https://dids1901.github.io" target="_blank" style="color: #ddd;">Diogo Coutinho</a> e <a href="https://dids1901.github.io" target="_blank" style="color: #ddd;">Guilherme Stern</a></p>
     </footer>
     {% endblock %}
+    {% block scripts %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
+    {% endblock %}
 </body>
 </html>
